# tibber-technical-case

./: .env.compose  .env.local  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
db/: createdb.sql
e2e_tests/: test_e2e.py
tibber_technical_case/: app.py  app_test.py  calculate_path.py  database.py  measure_utils.py  path_calculation.py  test_calculate_path.py  test_path_calculation.py
