[tool.poetry]
name = "tibber-technical-case"
version = "0.1.0"
description = "Tibber Technical case"
authors = ["Nikolai Tatarinov <5min4eq.unity@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
Flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
